# FinalRobotProject

./: .gitignore  APPENDIX_NOTES.md  LOGGERHEAD_MAP_AND_TOUR.md  README.md  REAL_ROBOT_MAP_AND_TOUR.md  REAL_WORLD_MAPPING.md  REAL_WORLD_MAPPING_AND_TOUR.md  REPORT_RESULTS_SNIPPET.md  RUN_ON_TURTLEBOT.md  TERRAPIN_LOGGERHEAD_NAV2_RECOVERY.md  TESTUDO_LOGGERHEAD_NAV2_RUNBOOK.md
docs/: KNOWN_COORDINATE_TOUR.md  REAL_ROBOT_MAPPING.md  REAL_ROBOT_TOUR_DEMO.md  REAL_WORLD_MAPPING_TERRAPIN.md
landmarks/: locations.yaml
src/ros2_aruco/: package.xml  setup.py
src/ros2_aruco/launch/: aruco_oakd.launch.py
src/ros2_aruco/ros2_aruco/: aruco_generate_marker.py  aruco_node.py
src/ros2_aruco_interfaces/: CMakeLists.txt  package.xml
src/tour_guide/: package.xml  setup.py
src/tour_guide/landmarks/: classroom_locations.yaml  locations.yaml
src/tour_guide/launch/: aruco_tour.launch.py  launch.py  real_nav.launch.py  tour_guide.launch.py
src/tour_guide/maps/: classroom_map.pgm  classroom_map.yaml  loggerhead_classroom.pgm  loggerhead_classroom.yaml  map_area.pgm  map_area.yaml
src/tour_guide/tour_guide/: known_stop_recorder.py  landmark_mapper.py  navnode.py  sim_aruco_detector.py
src/tour_guide/worlds/: tour_world.sdf
