<?xml version="1.0"?>
<package format="3">
  <name>ros2_aruco</name>
  <version>0.0.0</version>
  <description>Lightweight ROS 2 ArUco detector for the TurtleBot tour guide project.</description>
  <maintainer email="donovansemenuk@ou.edu">Donovan Semenuk</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ros2_aruco_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
