<?xml version="1.0"?>
<package format="3">
  <name>ros2_aruco_interfaces</name>
  <version>0.0.0</version>
  <description>Custom ArUco marker detection messages for the TurtleBot tour guide project.</description>
  <maintainer email="donovansemenuk@ou.edu">Donovan Semenuk</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
